--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -48,5 +48,5 @@ week:
 starter:
   label: starter
   permalink: /starter
-  description: starter tag description
+  description: starter tag description.
 
